ui bug fix -- color button on mobile

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -30,9 +30,6 @@ a#begin-btn {
     font-size: 0.8rem;
   }
   .flex-menu {
-    .menu-label {
-      width: 20px;
-    }
     #sizeRange {
       display: none;
     }
